syntax = "proto3";
package DistributedFileSystem.WorkerNode;
option csharp_namespace = "DistributedFileSystem.WorkerNode";

service WorkerNode {
    rpc StoreChunk(StoreChunkRequest) returns (StoreChunkResponse);
    rpc GetChunk(GetChunkRequest) returns (GetChunkResponse);
    rpc DeleteChunk(DeleteChunkRequest) returns (DeleteChunkResponse);
    rpc ResourceUsage(ResourceUsageRequest) returns (ResourceUsageResponse);
}

message StoreChunkRequest {
    string chunkId = 1;
    bytes chunkData = 2;
}

message StoreChunkResponse {
    bool status = 1;
    string message = 2;
}

message GetChunkRequest {
    string chunkId = 1;
}

message GetChunkResponse {
    bool status = 1;
    string message = 2;
    bytes chunkData = 3;
}

message DeleteChunkRequest {
    string chunkId = 1;
}

message DeleteChunkResponse {
    bool status = 1;
    string message = 2;
}

message ResourceUsageRequest {

}

message ResourceUsageResponse {
    bool status = 1;
    bool isActive = 2;
    int cpuUsage = 2;
    int memoryUsage = 3;
    int diskUsage = 4;
}