syntax = "proto3";
package DistributedFileSystem.WorkerNode;
option csharp_namespace = "DistributedFileSystem.WorkerNode";

service WorkerNode {
    rpc StoreChunk(StoreChunkRequest) returns (StoreChunkResponse);
    rpc GetChunk(GetChunkRequest) returns (GetChunkResponse);
    rpc DeleteChunk(DeleteChunkRequest) returns (DeleteChunkResponse);
    rpc ResourceUsage(ResourceUsageRequest) returns (ResourceUsageResponse);
}

message StoreChunkRequest {
    string chunkId = 1;
    bytes chunkData = 2;
}

message StoreChunkResponse {
    bool status = 1;
    string message = 2;
}

message GetChunkRequest {
    string chunkId = 1;
}

message GetChunkResponse {
    bool status = 1;
    string message = 2;
    bytes chunkData = 3;
}

message DeleteFileRequest {
    string fileName = 1;
}

message DeleteFileResponse {
    bool status = 1;
    string message = 2;
}

message ResourceUsageRequest {
    string workerAddress = 1;
}

message ResourceUsageResponse {
    bool status = 1;
    string message = 2;
    float cpuUsage = 3;
    float memoryUsage = 4;
    float diskSpace = 5;
}